save NNexus links

--- a/html/43-00-ProofOfAngleSumIdentities.html
+++ b/html/43-00-ProofOfAngleSumIdentities.html
@@ -18,9 +18,9 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">We will derive the angle sum identities for the various trigonometric
-functions here. We begin by deriving the identity for the sine by means
-of a geometric argument and then obtain the remaining identities by
+<p class="ltx_p">We will derive the <a class="nnexus_concept" href="http://planetmath.org/anglesumidentity">angle sum identities</a> for the various <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">trigonometric
+functions</a><sup style="display: none;"><a class="nnexus_concept" href="http://dlmf.nist.gov/4#PT3"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://mathworld.wolfram.com/TrigonometricFunctions.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/definitionsintrigonometry"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> here. We begin by deriving the identity for the sine by means
+of a geometric <a class="nnexus_concept" href="http://mathworld.wolfram.com/Argument.html">argument</a> and then obtain the remaining identities by
 algebraic manipulation.</p>
 </div>
 <div id="Thmthm1" class="ltx_theorem ltx_theorem_thm">
@@ -40,9 +40,9 @@ algebraic manipulation.</p>
 <div class="ltx_proof">
 <h6 class="ltx_title ltx_runin ltx_font_italic ltx_title_proof">Proof.</h6>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">Let us make the restrictions <math id="p2.m1" class="ltx_Math" alttext="0^{\circ}&lt;x&lt;90^{\circ}" display="inline"><mrow><msup><mn>0</mn><mo>∘</mo></msup><mo>&lt;</mo><mi>x</mi><mo>&lt;</mo><msup><mn>90</mn><mo>∘</mo></msup></mrow></math> and
+<p class="ltx_p">Let us make the <a class="nnexus_concept" href="http://planetmath.org/constructingnearlinearspacesfromexistingones">restrictions</a> <math id="p2.m1" class="ltx_Math" alttext="0^{\circ}&lt;x&lt;90^{\circ}" display="inline"><mrow><msup><mn>0</mn><mo>∘</mo></msup><mo>&lt;</mo><mi>x</mi><mo>&lt;</mo><msup><mn>90</mn><mo>∘</mo></msup></mrow></math> and
 <math id="p2.m2" class="ltx_Math" alttext="0^{\circ}&lt;y&lt;90^{\circ}" display="inline"><mrow><msup><mn>0</mn><mo>∘</mo></msup><mo>&lt;</mo><mi>y</mi><mo>&lt;</mo><msup><mn>90</mn><mo>∘</mo></msup></mrow></math> for the time being. Then we may draw a
-triangle <math id="p2.m3" class="ltx_Math" alttext="ABC" display="inline"><mrow><mi>A</mi><mo>⁢</mo><mi>B</mi><mo>⁢</mo><mi>C</mi></mrow></math> such that <math id="p2.m4" class="ltx_Math" alttext="\angle CAB=x" display="inline"><mrow><mrow><mi mathvariant="normal">∠</mi><mo>⁢</mo><mi>C</mi><mo>⁢</mo><mi>A</mi><mo>⁢</mo><mi>B</mi></mrow><mo>=</mo><mi>x</mi></mrow></math> and <math id="p2.m5" class="ltx_Math" alttext="\angle ABF=y" display="inline"><mrow><mrow><mi mathvariant="normal">∠</mi><mo>⁢</mo><mi>A</mi><mo>⁢</mo><mi>B</mi><mo>⁢</mo><mi>F</mi></mrow><mo>=</mo><mi>y</mi></mrow></math>:</p>
+<a class="nnexus_concept" href="http://planetmath.org/triangle">triangle</a> <math id="p2.m3" class="ltx_Math" alttext="ABC" display="inline"><mrow><mi>A</mi><mo>⁢</mo><mi>B</mi><mo>⁢</mo><mi>C</mi></mrow></math> such that <math id="p2.m4" class="ltx_Math" alttext="\angle CAB=x" display="inline"><mrow><mrow><mi mathvariant="normal">∠</mi><mo>⁢</mo><mi>C</mi><mo>⁢</mo><mi>A</mi><mo>⁢</mo><mi>B</mi></mrow><mo>=</mo><mi>x</mi></mrow></math> and <math id="p2.m5" class="ltx_Math" alttext="\angle ABF=y" display="inline"><mrow><mrow><mi mathvariant="normal">∠</mi><mo>⁢</mo><mi>A</mi><mo>⁢</mo><mi>B</mi><mo>⁢</mo><mi>F</mi></mrow><mo>=</mo><mi>y</mi></mrow></math>:</p>
 <table id="S0.Ex2" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -55,7 +55,7 @@ triangle <math id="p2.m3" class="ltx_Math" alttext="ABC" display="inline"><mrow>
 <math id="p2.m7" class="ltx_Math" alttext="\angle BCA=180^{\circ}-x-y" display="inline"><mrow><mrow><mi mathvariant="normal">∠</mi><mo>⁢</mo><mi>B</mi><mo>⁢</mo><mi>C</mi><mo>⁢</mo><mi>A</mi></mrow><mo>=</mo><mrow><msup><mn>180</mn><mo>∘</mo></msup><mo>-</mo><mi>x</mi><mo>-</mo><mi>y</mi></mrow></mrow></math>, so we have <math id="p2.m8" class="ltx_Math" alttext="\sin(\angle BCA)=\sin(180^{\circ}-x-y)=\sin(x+y)" display="inline"><mrow><mrow><mi>sin</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mrow><mi mathvariant="normal">∠</mi><mo>⁢</mo><mi>B</mi><mo>⁢</mo><mi>C</mi><mo>⁢</mo><mi>A</mi></mrow><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mi>sin</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mrow><msup><mn>180</mn><mo>∘</mo></msup><mo>-</mo><mi>x</mi><mo>-</mo><mi>y</mi></mrow><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mi>sin</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mrow><mi>x</mi><mo>+</mo><mi>y</mi></mrow><mo stretchy="false">)</mo></mrow></mrow></mrow></math>.</p>
 </div>
 <div id="p3" class="ltx_para">
-<p class="ltx_p">We now draw perpendiculars two different ways in order to derive ratios.
+<p class="ltx_p">We now draw <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">perpendiculars</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/normalline"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/perpendicularityineuclideanplane"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/dihedralangle"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> two different ways in order to derive ratios.
 First, we drop a perpendicular <math id="p3.m1" class="ltx_Math" alttext="AD" display="inline"><mrow><mi>A</mi><mo>⁢</mo><mi>D</mi></mrow></math> from <math id="p3.m2" class="ltx_Math" alttext="C" display="inline"><mi>C</mi></math> to <math id="p3.m3" class="ltx_Math" alttext="AB" display="inline"><mrow><mi>A</mi><mo>⁢</mo><mi>B</mi></mrow></math>:</p>
 <table id="S0.Ex3" class="ltx_equation ltx_eqn_table">
 
@@ -65,7 +65,7 @@ First, we drop a perpendicular <math id="p3.m1" class="ltx_Math" alttext="AD" di
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">Since <math id="p3.m4" class="ltx_Math" alttext="ACD" display="inline"><mrow><mi>A</mi><mo>⁢</mo><mi>C</mi><mo>⁢</mo><mi>D</mi></mrow></math> and <math id="p3.m5" class="ltx_Math" alttext="BCD" display="inline"><mrow><mi>B</mi><mo>⁢</mo><mi>C</mi><mo>⁢</mo><mi>D</mi></mrow></math> are right triangles we have, by definition,</p>
+<p class="ltx_p">Since <math id="p3.m4" class="ltx_Math" alttext="ACD" display="inline"><mrow><mi>A</mi><mo>⁢</mo><mi>C</mi><mo>⁢</mo><mi>D</mi></mrow></math> and <math id="p3.m5" class="ltx_Math" alttext="BCD" display="inline"><mrow><mi>B</mi><mo>⁢</mo><mi>C</mi><mo>⁢</mo><mi>D</mi></mrow></math> are <a class="nnexus_concept" href="http://mathworld.wolfram.com/RightTriangle.html">right triangles</a> we have, by <a class="nnexus_concept" href="http://planetmath.org/definition">definition</a>,</p>
 <table id="S0.Ex4" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -176,7 +176,7 @@ algebraically and use the fact that <math id="p5.m1" class="ltx_Math" alttext="\
 </div>
 <div id="p6" class="ltx_para">
 <p class="ltx_p">To lift the restriction on the range of <math id="p6.m1" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math> and <math id="p6.m2" class="ltx_Math" alttext="y" display="inline"><mi>y</mi></math>, we use the identities
-for complements and negatives of angles.</p>
+for <a class="nnexus_concept" href="http://mathworld.wolfram.com/Complement.html">complements</a> and <a class="nnexus_concept" href="http://planetmath.org/positive">negatives</a> of angles.</p>
 </div>
 <div id="p7" class="ltx_para">
 <p class="ltx_p">∎</p>
@@ -189,10 +189,10 @@ for complements and negatives of angles.</p>
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_t">Title</th>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">proof of angle sum identities</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concept" href="http://planetmath.org/proofofanglesumidentities">proof of angle sum identities</a></td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">ProofOfAngleSumIdentities</td>
 </tr>
 <tr class="ltx_tr">
