--- a/html/43A15-BargmannFockSpace.html
+++ b/html/43A15-BargmannFockSpace.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">The Bargmann-Fock space (or simply Fock space) is the Hilbert space of entire functions, <math id="p1.m1" class="ltx_Math" alttext="\mathcal{F}^{2}(\mathbb{C})" display="inline"><mrow><msup><mi class="ltx_font_mathcaligraphic">ℱ</mi><mn>2</mn></msup><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>ℂ</mi><mo stretchy="false">)</mo></mrow></mrow></math> s.t.</p>
+<p class="ltx_p">The Bargmann-Fock space (or simply Fock space) is the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Hilbert space</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/HilbertSpace.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/hilbertspace"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">entire functions</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/EntireFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/entirefunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, <math id="p1.m1" class="ltx_Math" alttext="\mathcal{F}^{2}(\mathbb{C})" display="inline"><mrow><msup><mi class="ltx_font_mathcaligraphic">ℱ</mi><mn>2</mn></msup><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>ℂ</mi><mo stretchy="false">)</mo></mrow></mrow></math> s.t.</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -27,7 +27,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">with associated inner product</p>
+<p class="ltx_p">with associated <a class="nnexus_concept" href="http://mathworld.wolfram.com/InnerProduct.html">inner product</a></p>
 <table id="S0.Ex2" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -48,7 +48,7 @@
 <li id="bib.bib1" class="ltx_bibitem">
         <span class="ltx_bibtag ltx_role_refnum">1</span>
         
-<span class="ltx_bibblock"> V. Bargmann, “Remarks on a Hilbert Space of Analytic Function” <span class="ltx_text ltx_font_italic">Proceedings of the National Academy of Sciences of the United States of America</span> <span class="ltx_text ltx_font_bold">48</span> (1962): 199 - 204
+<span class="ltx_bibblock"> V. Bargmann, “Remarks on a Hilbert Space of <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Analytic Function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/AnalyticFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/analytic"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>” <span class="ltx_text ltx_font_italic">Proceedings of the National Academy of Sciences of the United States of America</span> <span class="ltx_text ltx_font_bold">48</span> (1962): 199 - 204
 
 </span>
       </li>
@@ -56,7 +56,7 @@
 <li id="bib.bib2" class="ltx_bibitem">
         <span class="ltx_bibtag ltx_role_refnum">2</span>
         
-<span class="ltx_bibblock"> V. Bargmann &amp; I. T. Todorov, “Spaces of analytic functions on a complex cone as carriers for the symmetric tensor representations of SO(n)” <span class="ltx_text ltx_font_italic">Journal of Mathematical Physics</span> <span class="ltx_text ltx_font_bold">18</span> 6 (1977): 1141 - 1148
+<span class="ltx_bibblock"> V. Bargmann &amp; I. T. Todorov, “<a class="nnexus_concept" href="http://planetmath.org/spaceofanalyticfunctions">Spaces of analytic functions</a> on a <a class="nnexus_concept" href="http://planetmath.org/complex">complex</a> cone as carriers for the <a class="nnexus_concept" href="http://mathworld.wolfram.com/SymmetricTensor.html">symmetric tensor</a> representations of SO(n)” <span class="ltx_text ltx_font_italic">Journal of Mathematical Physics</span> <span class="ltx_text ltx_font_bold">18</span> 6 (1977): 1141 - 1148
 
 </span>
       </li>
