--- a/html/43A65-IrreducibleUnitaryRepresentationsOfCompactGroupsAreFinitedimensional.html
+++ b/html/43A65-IrreducibleUnitaryRepresentationsOfCompactGroupsAreFinitedimensional.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p"><span class="ltx_text ltx_font_bold">Theorem -</span> If <math id="p1.m1" class="ltx_Math" alttext="\pi\in rep(G,H)" display="inline"><mrow><mi>π</mi><mo>∈</mo><mrow><mi>r</mi><mo>⁢</mo><mi>e</mi><mo>⁢</mo><mi>p</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>G</mi><mo>,</mo><mi>H</mi><mo stretchy="false">)</mo></mrow></mrow></mrow></math> is a unitary representation of a compact topological group <math id="p1.m2" class="ltx_Math" alttext="G" display="inline"><mi>G</mi></math> in a Hilbert space <math id="p1.m3" class="ltx_Math" alttext="H" display="inline"><mi>H</mi></math>, then <math id="p1.m4" class="ltx_Math" alttext="\pi" display="inline"><mi>π</mi></math> has a finite-dimensional subrepresentation (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/TopologicalGroupRepresentation</span>).</p>
+<p class="ltx_p"><span class="ltx_text ltx_font_bold">Theorem -</span> If <math id="p1.m1" class="ltx_Math" alttext="\pi\in rep(G,H)" display="inline"><mrow><mi>π</mi><mo>∈</mo><mrow><mi>r</mi><mo>⁢</mo><mi>e</mi><mo>⁢</mo><mi>p</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>G</mi><mo>,</mo><mi>H</mi><mo stretchy="false">)</mo></mrow></mrow></mrow></math> is a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">unitary representation</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/UnitaryRepresentation.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/unitaryrepresentation"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of a compact topological group <math id="p1.m2" class="ltx_Math" alttext="G" display="inline"><mi>G</mi></math> in a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Hilbert space</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/HilbertSpace.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/hilbertspace"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="p1.m3" class="ltx_Math" alttext="H" display="inline"><mi>H</mi></math>, then <math id="p1.m4" class="ltx_Math" alttext="\pi" display="inline"><mi>π</mi></math> has a finite-dimensional <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">subrepresentation</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/banachalgebrarepresentation"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/grouprepresentation"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/TopologicalGroupRepresentation</span>).</p>
 </div>
 <div id="p2" class="ltx_para">
 <p class="ltx_p"><math id="p2.m1" class="ltx_Math" alttext="\," display="inline"><mi></mi></math></p>
@@ -37,7 +37,7 @@
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_l ltx_border_t">Title</td>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">irreducible unitary representations of compact groups are finite-dimensional</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concept" href="http://planetmath.org/irreducibleunitaryrepresentationsofcompactgroupsarefinitedimensional">irreducible unitary representations of compact groups are finite-dimensional</a></td>
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_l">Canonical name</td>
@@ -97,7 +97,7 @@
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_b ltx_border_l">Defines</td>
-<td class="ltx_td ltx_align_left ltx_border_b ltx_border_r">unitary group of a complex Hilbert space</td>
+<td class="ltx_td ltx_align_left ltx_border_b ltx_border_r"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">unitary group</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/UnitaryGroup.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/unitary"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of a complex Hilbert space</td>
 </tr>
 </tbody>
 </table>
